--- a/custom_components/sunseeker/translations/de.json
+++ b/custom_components/sunseeker/translations/de.json
@@ -1,250 +1,362 @@
 {
-    "config": {
-        "abort": {
-            "already_configured": "Account bereits konfiguriert"
-        },
-        "error": {
-            "connection_error": "Verbindung fehlgeschlagen"
-        },
-        "step": {
-            "user": {
-                "data": {
-                    "model": "Marke",
-                    "name": "Name",
-                    "email": "E-mail",
-                    "password": "Passwort"
-                }
-            }
-        }
+  "config": {
+    "abort": {
+      "already_configured": "Account bereits konfiguriert"
     },
-    "entity": {
-      "sensor": {
-  			"sunseeker_blade_speed": {
-				"name": "Messergeschwindigkeit"
-	  		},
-		  	"sunseeker_blade_height": {
-				"name": "Messerhöhe"
-},
-        "sunseeker_taskProgress": {
-				"name": "Mähfortschritt"
-			  },
-        "sunseeker_taskTotalArea": {
-				"name": "Gesamtfläche"
-			  },
-			  "sunseeker_taskCoverArea": {
-				"name": "Gemähte Fläche"
-			  },
-			  "sunseeker_net4g_level": {
-				"name": "4G Empfangsstärke"
-        },
-        "sunseeker_state_error": {
-          "name": "Statuswechsel-Fehler"
-        },
-        "sunseeker_mower_state": {
-          "name": "Rasenmäher-Status",
-          "state": {
-            "Standby": "Standby",
-            "Mowing": "Mäht",
-            "On the way home": "Fährt zum Dock",
-            "Charging": "Im Dock (Lädt)",
-            "Mowing border": "Mäht Grenze",
-            "Unknown": "Unbekannt",
-            "Unknown4": "Modus 4",
-            "Idle": "Bereit",
-            "Working": "Mäht",
-					"Pause": "Pausiert",
-					"Error": "Fehler",
-					"Return": "Fährt zum Dock",
-					"Return pause": "Fahrt zum Dock pausiert",
-					"Charging full": "Im Dock (Vollgeladen)",
-					"Offline": "Keine Verbindung",
-					"Locating": "Positionsbestimmung",
-					"Stop": "Gestoppt"
-          }
-        },
-        "sunseeker_battery": {
-          "name": "Batterie"
-        },
-        "sunseeker_rain_delay_set": {
-          "name": "Regensensor-Verzögerung"
-        },
-        "sunseeker_sensor_counter": {
-          "name": "Regensensor-Countdown"
-        },
-        "sunseeker_mowing_time": {
-          "name": "Tatsächliche Mähzeit"
-        },
-        "sunseeker_error": {
-          "name": "Fehlercode"
-        },
-        "sunseeker_error_text": {
-          "name": "Fehler"
-        },
-        "sunseeker_wifi_level": {
-          "name": "WLAN Empfangsstärke"
-        },
-        "sunseeker_rain_status": {
-          "name": "Regensensor",
-          "state": {
-            "Dry": "Trocken",
-            "Dry countdown": "Trocken Countdown",
-            "Wet": "Nass",
-            "Unknown": "Unbekannt"
-          }
-        },
-        "sunseekerzone1": {
-          "name": "Zone 1 Start"
-        },
-        "sunseekerzone2": {
-          "name": "Zone 2 Start"
-        },
-        "sunseekerzone3": {
-          "name": "Zone 3 Start"
-        },
-        "sunseekerzone4": {
-          "name": "Zone 4 Start"
-        }
-      },
-      "binary_sensor": {
-        "sunseeker_dock": {
-          "name": "Dock",
-          "state": {
-            "Away": "Weg",
-            "Home": "Zuhause",
-            "Unknown": "Unbekannt"
-          }
-        },
-        "sunseeker_rain_sensor_active": {
-          "name": "Regensensor aktiv"
-        },
-        "sunseeker_multizone": {
-          "name": "Multizone"
-        },
-        "sunseeker_multizoneauto": {
-          "name": "Multizone auto"
-        },
-        "sunseeker_schedule": {
-          "name": "Arbeitsplan"
-        },
-        "sunseeker_online": {
-          "name": "Online",
-          "state": {
-            "Connected": "Verbunden",
-            "Disconnected": "Getrennt",
-            "Unknown": "Unbekannt"
-          }
-        }
-      },
-      "lawn_mower": {
-        "sunseeker_lawnmower": {
-          "state": {
-            "Standby": "Standby",
-            "Mowing": "Mäht",
-            "On the way home": "Fährt zum Dock",
-            "Charging": "Lädt",
-            "Mowing border": "Mäht Grenze",
-            "Unknown": "Unbekannt",
-            "Unknown4": "Modus 4",
-            "Idle": "Bereit",
-            "Working": "Mäht",
-					"Pause": "Pausiert",
-					"Error": "Fehler",
-					"Return": "Fährt zum Dock",
-					"Return pause": "Fahrt zum Dock pausiert",
-					"Charging full": "Im Dock (Vollgeladen)",
-					"Offline": "Keine Verbindung",
-					"Locating": "Positionsbestimmung",
-					"Stop": "Gestoppt"
-          }
-        }
-      },
-      "button": {
-        "sunseeker_start": {
-          "name": "Mähvorgang starten"
-        },
-        "sunseeker_pause": {
-          "name": "Mähvorgang pausieren"
-        },
-        "sunseeker_border": {
-          "name": "Kanten mähen"
-        },
-        "sunseeker_home": {
-          "name": "Zum Dock fahren"
-        },
-        "sunseeker_stop": {
-          "name": "Stopp"
-        }
-      },
-      "device_tracker": {
-        "sunseeker_tracker": {
-          "name": "Roboter Position"
-        }
-      },
-      "switch": {
-        "sunseeker_rain_sensor": {
-          "name": "Regensensor"
-        },
-        "sunseeker_multi_zone": {
-          "name": "Multizone"
-        },
-        "sunseeker_multi_zone_auto": {
-          "name": "Multizone auto"
-        },
-        "schedule_active": {
-          "name": "Arbeitsplan"
-        }
-      },
-      "number": {
-        "sunseeker_rain_delay": {
-          "name": "Regenverzögerung"
-        },
-        "sunseeker_zone1": {
-          "name": "Zone 1 Start"
-        },
-        "sunseeker_zone2": {
-          "name": "Zone 2 Start"
-        },
-        "sunseeker_zone3": {
-          "name": "Zone 3 Start"
-        },
-        "sunseeker_zone4": {
-          "name": "Zone 4 Start"
-        },
-				"sunseeker_mulpro1": {
-				  "name": "Zone 1 Priorität"
-			  },
-			  "sunseeker_mulpro2": {
-				  "name": "Zone 2 Priorität"
-			  },
-			  "sunseeker_mulpro3": {
-				  "name": "Zone 3 Priorität"
-			  },
-			  "sunseeker_mulpro4": {
-				  "name": "Zone 4 Priorität"
-			  }
-      },
-      "text": {
-        "sunseeker_schedule_text_1": {
-          "name": "Arbeitsplan Montag"
-        },
-        "sunseeker_schedule_text_2": {
-          "name": "Arbeitsplan Dienstag"
-        },
-        "sunseeker_schedule_text_3": {
-          "name": "Arbeitsplan Mittwoch"
-        },
-        "sunseeker_schedule_text_4": {
-          "name": "Arbeitsplan Donnerstag"
-        },
-        "sunseeker_schedule_text_5": {
-          "name": "Arbeitsplan Freitag"
-        },
-        "sunseeker_schedule_text_6": {
-          "name": "Arbeitsplan Samstag"
-        },
-        "sunseeker_schedule_text_7": {
-          "name": "Arbeitsplan Sonntag"
+    "error": {
+      "connection_error": "Verbindung fehlgeschlagen"
+    },
+    "step": {
+      "user": {
+        "data": {
+          "model": "Marke",
+          "name": "Name",
+          "email": "E-Mail",
+          "password": "Passwort"
         }
       }
     }
+  },
+  "entity": {
+    "select": {
+      "sunseeker_schedule_mode": {
+        "name": "Zeitplanmodus",
+        "state": {
+          "No schedule": "Kein Zeitplan",
+          "Recommended": "Empfohlen",
+          "User defined": "Benutzerdefiniert"
+        }
+      },
+      "sunseeker_zones": {
+        "name": "Zonen"
+      },
+      "sunseeker_cutting_pattern": {
+        "name": "Mähmuster",
+        "state": {
+          "Standard": "Standard",
+          "Change pattern": "Muster wechseln",
+          "User defined": "Benutzerdefiniert"
+        }
+      },
+      "sunseeker_avoiding_objects": {
+        "name": "Objekte vermeiden",
+        "state": {
+          "No touch": "Kein Kontakt",
+          "Slow touch": "Langsamer Kontakt"
+        }
+      },
+      "sunseeker_ai_sensitivity": {
+        "name": "KI-Empfindlichkeit",
+        "state": {
+          "Low": "Niedrig",
+          "High": "Hoch"
+        }
+      },
+      "sunseeker_edge_freq": {
+        "name": "Kantenschnitt-Frequenz",
+        "state": {
+          "Every time": "Jedes Mal",
+          "Every 2nd time": "Jedes 2. Mal",
+          "Every 3rd time": "Jedes 3. Mal"
+        }
+      },
+      "sunseeker_work_speed": {
+        "name": "Arbeitsgeschwindigkeit",
+        "state": {
+          "Slow": "Langsam",
+          "Normal": "Normal",
+          "Fast": "Schnell"
+        }
+      },
+      "sunseeker_gap": {
+        "name": "Schnittabstand",
+        "state": {
+          "Narrow": "Schmal",
+          "Normal": "Normal",
+          "Wide": "Breit"
+        }
+      }
+    },
+    "sensor": {
+			"sunseeker_estimated_time_custom": {
+				"name": "{post_name} Geschätzte Zeit"
+			},
+			"sunseeker_area_size_custom": {
+				"name": "{post_name} Bereich"
+			},
+      "sunseeker_events": {
+        "name": "Ereignis"
+      },
+      "sunseeker_robot_sig": {
+        "name": "Robotersignal"
+      },
+      "sunseeker_blade_speed": {
+        "name": "Messergeschwindigkeit"
+      },
+      "sunseeker_blade_height": {
+        "name": "Messerhöhe"
+      },
+      "sunseeker_taskProgress": {
+        "name": "Mähfortschritt"
+      },
+      "sunseeker_taskTotalArea": {
+        "name": "Gesamtfläche"
+      },
+      "sunseeker_taskCoverArea": {
+        "name": "Gemähte Fläche"
+      },
+      "sunseeker_net4g_level": {
+        "name": "4G Empfangsstärke"
+      },
+      "sunseeker_state_error": {
+        "name": "Statuswechsel-Fehler"
+      },
+      "sunseeker_mower_state": {
+        "name": "Rasenmäher-Status",
+        "state": {
+          "Standby": "Standby",
+          "Mowing": "Mäht",
+          "On the way home": "Fährt zum Dock",
+          "Charging": "Im Dock (Lädt)",
+          "Mowing border": "Mäht Grenze",
+          "Unknown": "Unbekannt",
+          "Unknown4": "Modus 4",
+          "Idle": "Bereit",
+          "Working": "Mäht",
+          "Pause": "Pausiert",
+          "Error": "Fehler",
+          "Return": "Fährt zum Dock",
+          "Return pause": "Fahrt zum Dock pausiert",
+          "Charging full": "Im Dock (Vollgeladen)",
+          "Offline": "Keine Verbindung",
+          "Locating": "Positionsbestimmung",
+          "Stop": "Gestoppt",
+          "Continue mowing": "Weiter mähen",
+          "Stuck": "Festgefahren"
+        }
+      },
+      "sunseeker_battery": {
+        "name": "Batterie"
+      },
+      "sunseeker_rain_delay_set": {
+        "name": "Regensensor-Verzögerung"
+      },
+      "sunseeker_sensor_counter": {
+        "name": "Regensensor-Countdown"
+      },
+      "sunseeker_mowing_time": {
+        "name": "Tatsächliche Mähzeit"
+      },
+      "sunseeker_error": {
+        "name": "Fehlercode"
+      },
+      "sunseeker_error_text": {
+        "name": "Fehler"
+      },
+      "sunseeker_wifi_level": {
+        "name": "WLAN Empfangsstärke"
+      },
+      "sunseeker_rain_status": {
+        "name": "Regensensor",
+        "state": {
+          "Dry": "Trocken",
+          "Dry countdown": "Trocken Countdown",
+          "Wet": "Nass",
+          "Unknown": "Unbekannt"
+        }
+      },
+      "sunseekerzone1": {
+        "name": "Zone 1 Start"
+      },
+      "sunseekerzone2": {
+        "name": "Zone 2 Start"
+      },
+      "sunseekerzone3": {
+        "name": "Zone 3 Start"
+      },
+      "sunseekerzone4": {
+        "name": "Zone 4 Start"
+      }
+    },
+    "binary_sensor": {
+      "sunseeker_dock": {
+        "name": "Dock",
+        "state": {
+          "Away": "Weg",
+          "Home": "Zuhause",
+          "Unknown": "Unbekannt"
+        }
+      },
+      "sunseeker_rain_sensor_active": {
+        "name": "Regensensor aktiv"
+      },
+      "sunseeker_multizone": {
+        "name": "Multizone"
+      },
+      "sunseeker_multizoneauto": {
+        "name": "Multizone Auto"
+      },
+      "sunseeker_schedule": {
+        "name": "Arbeitsplan"
+      },
+      "sunseeker_online": {
+        "name": "Online",
+        "state": {
+          "Connected": "Verbunden",
+          "Disconnected": "Getrennt",
+          "Unknown": "Unbekannt"
+        }
+      }
+    },
+    "lawn_mower": {
+      "sunseeker_lawnmower": {
+        "state": {
+          "Standby": "Standby",
+          "Mowing": "Mäht",
+          "On the way home": "Fährt zum Dock",
+          "Charging": "Lädt",
+          "Mowing border": "Mäht Grenze",
+          "Unknown": "Unbekannt",
+          "Unknown4": "Modus 4",
+          "Idle": "Bereit",
+          "Working": "Mäht",
+          "Pause": "Pausiert",
+          "Error": "Fehler",
+          "Return": "Fährt zum Dock",
+          "Return pause": "Fahrt zum Dock pausiert",
+          "Charging full": "Im Dock (Vollgeladen)",
+          "Offline": "Keine Verbindung",
+          "Locating": "Positionsbestimmung",
+          "Stop": "Gestoppt",
+          "Continue mowing": "Weiter mähen",
+          "Stuck": "Festgefahren"
+        }
+      }
+    },
+    "button": {
+      "sunseeker_start": {
+        "name": "Mähvorgang starten"
+      },
+      "sunseeker_pause": {
+        "name": "Mähvorgang pausieren"
+      },
+      "sunseeker_border": {
+        "name": "Kanten mähen"
+      },
+      "sunseeker_home": {
+        "name": "Zum Dock fahren"
+      },
+      "sunseeker_stop": {
+        "name": "Stopp"
+      }
+    },
+    "device_tracker": {
+      "sunseeker_tracker": {
+        "name": "Roboterposition"
+      }
+    },
+    "camera": {
+      "mower_live_map": {
+        "name": "Live-Karte"
+      }
+    },
+    "image": {
+      "mower_wifimap": {
+        "name": "WLAN-Karte"
+      },
+      "mower_heatmap": {
+        "name": "Heatmap"
+      },
+      "mower_map": {
+        "name": "Karte"
+      }
+    },
+    "switch": {
+      "sunseeker_custom_enable": {
+        "name": "Benutzerdefinierte Zonen"
+      },
+      "sunseeker_time_work_repeat": {
+        "name": "Arbeitszeit wiederholen"
+      },
+      "sunseeker_border_first": {
+        "name": "Zuerst Kante"
+      },
+      "sunseeker_rain_sensor": {
+        "name": "Regensensor"
+      },
+      "sunseeker_multi_zone": {
+        "name": "Multizone"
+      },
+      "sunseeker_multi_zone_auto": {
+        "name": "Multizone Auto"
+      },
+      "schedule_active": {
+        "name": "Arbeitsplan"
+      }
+    },
+    "number": {
+      "sunseeker_blade_speed_custom": {
+        "name": "{post_name} Messergeschwindigkeit"
+      },
+      "sunseeker_blade_height_custom": {
+        "name": "{post_name} Messerhöhe"
+      },
+      "sunseeker_blade_speed": {
+        "name": "Messergeschwindigkeit"
+      },
+      "sunseeker_blade_height": {
+        "name": "Messerhöhe"
+      },
+      "sunseeker_rain_delay": {
+        "name": "Regenverzögerung"
+      },
+      "sunseeker_zone1": {
+        "name": "Zone 1 Start"
+      },
+      "sunseeker_zone2": {
+        "name": "Zone 2 Start"
+      },
+      "sunseeker_zone3": {
+        "name": "Zone 3 Start"
+      },
+      "sunseeker_zone4": {
+        "name": "Zone 4 Start"
+      },
+      "sunseeker_mulpro1": {
+        "name": "Zone 1 Priorität"
+      },
+      "sunseeker_mulpro2": {
+        "name": "Zone 2 Priorität"
+      },
+      "sunseeker_mulpro3": {
+        "name": "Zone 3 Priorität"
+      },
+      "sunseeker_mulpro4": {
+        "name": "Zone 4 Priorität"
+      }
+    },
+    "text": {
+      "sunseeker_schedule_text_1": {
+        "name": "Arbeitsplan Montag"
+      },
+      "sunseeker_schedule_text_2": {
+        "name": "Arbeitsplan Dienstag"
+      },
+      "sunseeker_schedule_text_3": {
+        "name": "Arbeitsplan Mittwoch"
+      },
+      "sunseeker_schedule_text_4": {
+        "name": "Arbeitsplan Donnerstag"
+      },
+      "sunseeker_schedule_text_5": {
+        "name": "Arbeitsplan Freitag"
+      },
+      "sunseeker_schedule_text_6": {
+        "name": "Arbeitsplan Samstag"
+      },
+      "sunseeker_schedule_text_7": {
+        "name": "Arbeitsplan Sonntag"
+      }
+    }
   }
+}
